--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+#Mac
 .DS_Store
 .DS_Store?
+.AppleDouble
+# Thumbnails
 ._*
+# Files that might appear on external disk
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
